Fixed Navbar
Fixed the positioning of navbar, which overlapped the book elements when added to the page.

--- a/styles.scss
+++ b/styles.scss
@@ -5,6 +5,13 @@ body {
     font-family: 'Courier New', Courier, monospace;
 }
 
+#maincontent {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    flex-grow: 1;
+}
+
 .light-mode {
     .nav-items {
         color: rgb(30, 30, 30);
@@ -188,7 +195,6 @@ body {
     border-radius: 8px;
     padding-inline: 20px;
     padding-block: 10px;
-    position: relative;
 }
 
 .form-input {
@@ -242,6 +248,7 @@ body {
     border-radius: 5px;
     font-weight: 100;
     font-family: 'Courier New', Courier, monospace;
+
     &:hover {
         background-color: white;
         color: red;
@@ -275,15 +282,14 @@ body {
     background-color: black;
     color: white;
     text-align: center;
-    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-    z-index: 0;
+    margin-top: 20px;
 
     &>h4 {
-        margin: 5px;
-
+        margin: 0;
+        padding-block: 10px;
         &>a {
             text-decoration: none;
             color: white;
